把react devtools 汉化版扩展版本更新至7.0.0

--- a/static/react-devtools/panel.html
+++ b/static/react-devtools/panel.html
@@ -24,7 +24,7 @@
             }
             .no-react-disclaimer {
               margin: 16px;
-              font-family: Courier, monospace, serif;
+              font-family: "JetBrains Maple Mono",Courier, monospace, serif;
               font-size: 16px;
               animation: fadeIn .5s ease-in-out forwards;
             }
