--- a/static/react-devtools/popups/development.html
+++ b/static/react-devtools/popups/development.html
@@ -11,14 +11,14 @@
   }
 </style>
 <p>
-  <b>This page is using the development build of React. &#x1f6a7;</b>
+  <b>此页面正在使用 React 的开发版本 &#x1f6a7;</b>
 </p>
 <p>
-  Note that the development build is not suitable for production.
+  请注意，开发版本不适合用于生产环境
   <br />
-  Make sure to <a href="https://reactjs.org/docs/optimizing-performance.html#use-the-production-build">use the production build</a> before deployment.
+  在部署前务必<a href="https://reactjs.org/docs/optimizing-performance.html#use-the-production-build">使用生产版本</a>
 </p>
 <hr />
 <p>
-  Open the developer tools, and  "Components" and "Profiler" tabs will appear to the right.
+  打开开发者工具，右侧将出现 Components 和 Profiler 标签页。
 </p>
