--- a/static/react-devtools/popups/production.html
+++ b/static/react-devtools/popups/production.html
@@ -10,8 +10,9 @@
     width: 100%;
   }
 </style>
+
 <p>
-  <b>This page is using the production build of React. &#x2705;</b>
+  <b>此页面正在使用 React 的生产版本&#x2705;</b>
   <br />
-  Open the developer tools, and  "Components" and "Profiler" tabs will appear to the right.
+  打开开发者工具，右侧将出现 Components 和 Profiler 标签页。
 </p>
